libs/@local/hashql/hir/tests/ui/reify/list.jsonc
//@ run: fail
//@ description: list literals are unsupported in the current version
{ "#list": [{ "#literal": 2 }] }
//~^ ERROR `list literal` not supported yet
